--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,24 @@ img {
     right: 50px;
 }
 
+#img-left:hover {
+    box-shadow: 0px 0px 11px 0px  #2020201f;
+}
+
+#img-center:hover {
+    box-shadow: 0px 0px 11px 0px  #2020201f;
+}
+
+#img-right:hover {
+    box-shadow: 0px 0px 11px 0px  #2020201f;
+}
+
 .examples {
     margin: 44px;
+}
+
+.examples:hover {
+    box-shadow: 0px 0px 5px 5px  #2020201f;
 }
 
 #membership-box {
@@ -223,5 +239,42 @@ footer ul li a{
 
 footer ul li {
     list-style: none;
+    font-family: 'Merriweather', serif;
+    color: black;
 }
+
+footer ul li:nth-of-type(2n+1) {
+
+    color: #20202070;
+}
+
+footer ul li a {
+    line-height: 80px;
+    color: #000;
+}
+
+#footer-fb::before {
+    content: ".";
+    color: #3b5998;
+    font-size: 40px;
+}
+
+#footer-ig::before {
+    content: ".";
+    color: #fcaf45;
+    font-size: 40px;
+}
+
+#footer-tw::before {
+    content: ".";
+    color: #55acee;
+    font-size: 40px;
+}
+
+#footer-yt::before {
+    content: ".";
+    color: #c4302b;
+    font-size: 40px;
+}
+
 
